// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/ClassifiedBadge should render a classified badge with a tooltip 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="bottom-center"
  text="fubar"
  theme="default"
>
  <SecurityBadge
    className="bdl-ClassifiedBadge"
    color="#ffeb7f"
    icon={
      <IconSecurityClassification
        height={12}
        width={12}
      />
    }
    message="Confidential"
  />
</Tooltip>
`;

exports[`features/classification/ClassifiedBadge should render a classified badge with tooltip disabled 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={true}
  isTabbable={false}
  position="bottom-center"
  theme="default"
>
  <SecurityBadge
    className="bdl-ClassifiedBadge"
    color="#ffeb7f"
    icon={
      <IconSecurityClassification
        height={12}
        width={12}
      />
    }
    message="Confidential"
  />
</Tooltip>
`;

exports[`features/classification/ClassifiedBadge should render a classified badge within a button when onClick is provided 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isTabbable={false}
  position="bottom-center"
  text="fubar"
  theme="default"
>
  <PlainButton
    className="bdl-ClassifiedBadge-editButton"
    data-resin-target="editclassification"
    onClick={[Function]}
    type="button"
  >
    <SecurityBadge
      className="bdl-ClassifiedBadge"
      color="#ffeb7f"
      icon={
        <IconSecurityClassification
          height={12}
          width={12}
        />
      }
      message="Confidential"
    />
  </PlainButton>
</Tooltip>
`;
